overflow-x fix전

--- a/client/src/scss/recommend-gnb.scss
+++ b/client/src/scss/recommend-gnb.scss
@@ -7,9 +7,7 @@
     gap: 3rem;
     text-align: center;
     width: 100%;
-    padding: 0 2.5rem;
-    border-top: 1px solid rgba(0, 0, 0, 0.08);
-    padding-top: 3rem;
+    padding: 5rem 2.5rem 0 2.5rem;
     box-sizing: border-box;
 
     li {
